--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "devDependencies": {
     "@types/node": "^17.0.17",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "eslint": "^8.8.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.28.0",
+    "prettier": "^2.5.1",
     "prisma": "^3.9.2",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
