--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@types/node": "^17.0.17",
+    "@types/react": "^17.0.39",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "eslint": "^8.8.0",
@@ -13,6 +14,12 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@prisma/client": "^3.9.2"
+    "@prisma/client": "^3.9.2",
+    "final-form": "^4.20.6",
+    "next": "^12.0.10",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-final-form": "^6.5.8",
+    "zod": "^3.11.6"
   }
 }
